Resolves #42 fix settings button alignment

--- a/src/main/js/bundles/dn_sketchingenhanced-themes-extension/everlasting/styles/dn_sketchingenhanced.less
+++ b/src/main/js/bundles/dn_sketchingenhanced-themes-extension/everlasting/styles/dn_sketchingenhanced.less
@@ -168,14 +168,11 @@
                         }
                     }
                     //Footer Container
-                    .sketchingFooter {
-                        .v-toolbar__content {
-                            padding: 0 10px;
-                            height: 50px;
-                            .v-btn {
-                                box-shadow: none;
-                                padding: 0;
-                            }
+                    .v-footer.sketchingFooter {
+                        height:43px!important;
+                        .v-btn {
+                            padding: 0;
+                            box-shadow: none;
                         }
                     }
                 }
